<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Eggshell"
    tools:context=".Impostazioni.ImpostazioniActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/LayoutMargin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trasfusioni"
                android:textSize="@dimen/text_subtitle"
                android:layout_marginVertical="@dimen/MarginVertical">
            </TextView>

            <Switch
                android:id="@+id/switchTrasfusione"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="@dimen/MarginVertical"
                android:textSize="@dimen/text_normal"
                android:text="@string/notifica_la_prossima_trasfusione" />

            <LinearLayout
                android:id="@+id/LLSwitchTrasfusione"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/impostazioni_label1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal" />

                <EditText
                    android:id="@+id/editTextEsami"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esami_strumentali"
                android:textSize="@dimen/text_subtitle"
                android:layout_marginVertical="@dimen/MarginVertical">
            </TextView>

            <Switch
                android:id="@+id/switchEsameStrumentale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginVertical="@dimen/MarginVertical"
                android:textSize="@dimen/text_normal"
                android:text="@string/impostazioni_switch2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/impostazioni_label1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal" />

                <EditText
                    android:id="@+id/editTextTime3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time" />

            </LinearLayout>

            <Switch
                android:id="@+id/switchEsameStrumentalePeriodici"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginVertical="@dimen/MarginVertical"
                android:textSize="@dimen/text_normal"
                android:text="@string/notifica_possibili_esami_non_programmati" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esami_di_laboratorio"
                android:textSize="@dimen/text_subtitle"
                android:layout_marginVertical="@dimen/MarginVertical">
            </TextView>

            <Switch
                android:id="@+id/switchEsamiLaboratorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginVertical="@dimen/MarginVertical"
                android:textSize="@dimen/text_normal"
                android:text="@string/impostazioni_switch3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/impostazioni_label1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal" />

                <EditText
                    android:id="@+id/editTextTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time" />

            </LinearLayout>

            <Switch
                android:id="@+id/switchEsameLaboratorioPeriodici"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginVertical="@dimen/MarginVertical"
                android:textSize="@dimen/text_normal"
                android:text="@string/notifica_possibili_esami_non_programmati" />


            <TextView
                android:id="@+id/TXVUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>

            <Button
                android:id="@+id/buttonDisconnetti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_normal"
                android:layout_marginVertical="@dimen/MarginVertical"
                android:text="@string/disconnetti" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>